--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/spas-logo.svg" />
+  <!-- <link rel="icon" href="/spas-logo.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-snowpack-app bundler" />
   <title>Spas Zahariev</title>
@@ -13,21 +12,9 @@
 <body>
   <div id="root"></div>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <link rel="stylesheet" href="bundle.css">
-  <script type="module" src="bundle.js"></script>
+  <!-- <link rel="stylesheet" href="bundle.css"> -->
+  <!-- <script type="module" src="bundle.js"></script> -->
   <!--
-=======
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="./spas-logo.svg"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-snowpack-app bundler" />
-    <title>Spas Zahariev</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <!--
->>>>>>> 7e08c9e906737d171f39529f914890cefe0ca961
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
